Empty report and presentation

--- a/report/report.tex
+++ b/report/report.tex
@@ -6,8 +6,7 @@
 \usepackage[francais]{babel}
 
 \begin{document}
-\title{Apprentissage Supervisé: filtrage des spams à l'aide de catégorisation
-automatique de texte}
+\title{Données Séquentielles et Symboliques: Translittération automatique}
 
 \author{Alexandre Bérard, Mathias Millet, Charles Robin}
 \maketitle
