--- a/report/report.bib
+++ b/report/report.bib
@@ -31,3 +31,20 @@
     url = {http://www.jair.org/media/1999/live-1999-2886-jair.pdf},
     publisher = {AI Access Foundation},
 }
+@inproceedings{AlOnaizan02,
+    author = {Al-Onaizan, Yaser and Knight, Kevin},
+    title = {Machine Transliteration of Names in Arabic Text},
+    booktitle = {Proceedings of the ACL-02 Workshop on Computational Approaches to Semitic Languages},
+    series = {SEMITIC '02},
+    year = {2002},
+    pages = {1--13},
+    url = {http://aclweb.org/anthology//W/W02/W02-0505.pdf},
+    publisher = {Association for Computational Linguistics},
+} 
+@manual{Moses,
+    author = {Koehn, Philipp},
+    title = {Moses, Statistical Machine Translation System, User Manual and Code Guide},
+    year = {2014},
+    url = {http://www.statmt.org/moses/manual/manual.pdf},
+    address = {University of Edinburgh},
+} 
