--- a/report/report.tex
+++ b/report/report.tex
@@ -15,6 +15,13 @@
 \vspace{0.5em}
 \section{Introduction}
 
+La translittération est le fait de traduire, entre deux langues dont les graphèmes diffèrent\footnote{Un graphème est l'unité de l'écrit correspondant au phonème, une unité de prononciation orale}, un mot ayant la même (ou presque) prononciation dans les deux langues. C'est surtout le cas pour le vocabulaire technique, qui conserve  la même prononciation entre plusieurs langues, mais dont la transcription va varier (en particulier lorsque les langues sont écrites avec des alphabets différents).
+
+La translitération trouve un interêt lorsqu'elle est effectuée de manière automatique. En effet, avec l'aparition de nouveaux termes techniques, il est difficile de maintenir à jour des dictionnaires.\\
+
+Pour ce projet, nous devons implémenter des méthodes de translitération entre l'espagnol et le portugais, et entre l'anglais et le russe.
+
+
 \subsection{Jeux de données}
 Les données nous ont été fournies par Vincent Claveau. Nous disposons de deux jeux de données, concernant respectivement la translittération de l'\emph{espagnol} au \emph{portugais} et de l'\emph{anglais} vers le \emph{russe}. Chacun de ces jeux de données est divisé en deux fichiers, un fichier pour l'apprentissage et un fichier pour l'évaluation. Le fichier d'apprentissage contient plusieurs milliers d'entrées (3057 pour le portugais, et 7262 pour le russe), chaque entrée correspondant à un mot dans la langue originale et sa transcription dans le langage cible. Les entrées dans le fichier d'évaluation, elles, peuvent cependant contenir plusieurs transcriptions pour un même mot. 
 
