petite modif report, debut presentation

--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -26,6 +26,14 @@
 \section{Introduction}    
 \begin{frame}
     \frametitle{Introduction}
+	
+	\begin{block}{Definition}
+	    \begin{itemize}
+    		\item Keep the pronunciation of a word
+    		\item Using phonemes from another language
+    		\end{itemize}
+    \end{block}	    
+    
 \end{frame}
 
 \begin{frame}
