--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -26,15 +26,51 @@
 \section{Introduction}    
 \begin{frame}
     \frametitle{Introduction}
-	
+	\framesubtitle{Translitération}
 	\begin{block}{Definition}
 	    \begin{itemize}
-    		\item Keep the pronunciation of a word
-    		\item Using phonemes from another language
+    		\item Conserver la m\^eme prononciation pour un mot
+    		\item En utilisant des phonèmes d'une autre langue
     		\end{itemize}
     \end{block}	    
     
+	\begin{exampleblock}{Examples : anglais - hindi}
+	\includegraphics[scale=0.3]{en-in-example}
+    \end{exampleblock}
+    
+	\begin{block}{Pourquoi ?}
+	\begin{itemize}
+		\item Traduction automatique de termes techniques
+		\item Plus besoin de maintenir un dictionnaire !
+	\end{itemize}
+	\end{block}	    
+    
+    
 \end{frame}
+
+\begin{frame}
+\frametitle{Introduction}
+\framesubtitle{Le projet}
+
+	\begin{block}{Le but}
+		Implémenter des techniques de translitération 
+		\begin{itemize}
+		\item Entre l'espagnol et le portugais
+		\item Entre l'anglais et le russe
+		\end{itemize}
+	\end{block}
+
+	\begin{block}{Les données}
+	Pour chaque pair de languages :		
+		\begin{itemize}
+		\item Un corpus d'apprentissage
+		\item Un corpus de test
+		\end{itemize}		
+	\end{block}
+
+\end{frame}
+
+
 
 \begin{frame}
     \frametitle{Bibliography}
