--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -23,7 +23,8 @@
 \titlepage
 \end{frame}
 
-\section{Introduction}    
+\section{Introduction}   
+ 
 \begin{frame}
     \frametitle{Introduction}
 	\framesubtitle{Translitération}
@@ -67,6 +68,24 @@
 		\item Un corpus de test
 		\end{itemize}		
 	\end{block}
+
+\end{frame}
+
+\section{Méthodologie}
+
+\begin{frame}
+\frametitle{Méthodologie}
+
+	\begin{block}{Échantillonage ?}
+	Les données fournies sont déjà séparées entre données d'apprentissage et données de test\\
+	$\Longrightarrow$ L'échantillonage n'est pas nécéssaire
+	\end{block}
+
+	\begin{block}{Mesures}
+		
+	
+	\end{block}
+
 
 \end{frame}
 
