--- a/report/report.tex
+++ b/report/report.tex
@@ -7,6 +7,9 @@
 \usepackage[T2A,T1]{fontenc}
 \usepackage[russian,french]{babel}
 \usepackage{tikz}
+
+
+
 \begin{document}
 \title{Données Séquentielles et Symboliques: Translittération automatique}
 
@@ -17,14 +20,13 @@
 \vspace{0.5em}
 \section{Introduction}
 
-La translittération est le fait de traduire, entre deux langues dont les graphèmes diffèrent\footnote{Un graphème est l'unité de l'écrit correspondant au phonème, une unité de prononciation orale}, un mot ayant la même (ou presque) prononciation dans les deux langues. C'est surtout le cas pour le vocabulaire technique, qui conserve  la même prononciation entre plusieurs langues, mais dont la transcription va varier (en particulier lorsque les langues sont écrites avec des alphabets différents).
+La translittération est le fait de remplacer chaque graphème d'un système d'écriture par graphème ou un groupe de graphèmes d'un autre système, indépendamment de la prononciation. La translittération peut être par exemple utilisée pour écrire un nom propre d'un alphabet dans un autre. 
+La translittération automatique est un domaine particulier de la translittération, qui va trouver des application par exemple pour traduire des mots qui ne sont pas encore dans les dictionnaires, ou traduire automatiquement des requêtes effectuées dans des systèmes d'écriture peu utilisés sur internet [BIBLIO Transliteration as Alignment vs.Transliteration as Generation for Crosslingual Information Retrieval].
 
-La translitération trouve un interêt lorsqu'elle est effectuée de manière automatique. En effet, avec l'aparition de nouveaux termes techniques, il est difficile de maintenir à jour des dictionnaires.\\
 
 \subsection{Jeux de données}
 Les données nous ont été fournies par Vincent Claveau. Nous disposons de deux jeux de données, concernant respectivement la translittération de l'\emph{espagnol} au \emph{portugais} et de l'\emph{anglais} vers le \emph{russe}. Chacun de ces jeux de données est divisé en deux fichiers, un fichier pour l'apprentissage et un fichier pour l'évaluation. Le fichier d'apprentissage contient plusieurs milliers d'entrées (3057 pour le portugais, et 7262 pour le russe), chaque entrée correspondant à un mot dans la langue originale et sa transcription dans le langage cible. Les entrées dans le fichier d'évaluation, elles, peuvent cependant contenir plusieurs transcriptions pour un même mot. 
 
-Techniquement, la traduction de l'espagnol vers le portugais n'est pas exactement de la translitération, mais, l'espagnol et le portugais étant très proches, on peut supposer que des techniques de translitération peuvent donner des résultats intéressants en traduction automatique classique.
 
 \begin{figure}[H]
 \caption{Entrées dans le fichier d'apprentissage Espagnol-Portugais}
