--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -30,8 +30,8 @@
 	\framesubtitle{Translitération}
 	\begin{block}{Definition}
 	    \begin{itemize}
-    		\item Conserver la m\^eme prononciation pour un mot
-    		\item En utilisant des phonèmes d'une autre langue
+	    \item Remplacement d'un graphème d'un système d'écriture par un ou plusieurs graphèmes d'un autre système d'écriture
+    		\item Indépendent de la prononciation
     		\end{itemize}
     \end{block}	    
     
@@ -42,6 +42,7 @@
 	\begin{block}{Pourquoi ?}
 	\begin{itemize}
 		\item Traduction automatique de termes techniques
+		\item Traduction automatique de requ\^etes
 		\item Plus besoin de maintenir un dictionnaire !
 	\end{itemize}
 	\end{block}	    
@@ -82,8 +83,10 @@
 	\end{block}
 
 	\begin{block}{Mesures}
-		
-	
+	Deux mesures :
+		\begin{itemize}
+		\item 
+		\end{itemize}		
 	\end{block}
 
 
