Initialisation partie rapport Charles

--- a/report/report.tex
+++ b/report/report.tex
@@ -157,6 +157,8 @@ Le problème de la translittération est relativement proche de la traduction au
 \includegraphics[scale=0.25]{letter_alignment.png}
 \end{figure}
 
+\section{CRF}
+Les CRF \emph{Conditionnal Random Fields}
 \section{Conclusion et perspectives}
 \nocite{*}
 \bibliographystyle{plain}
