--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -116,6 +116,19 @@ où $\delta(y,y')=levenshtein(y,y')$
 \end{frame}
 
 \begin{frame}
+	\frametitle{Apprentissage}
+
+	\begin{block}{Objectif}
+	Trouver un compromis entre :
+		\begin{itemize}
+		\item Fiabilité : la règle ne conduit pas à de fausses translitérations
+		\item Généralisation : la règle peut s'appliquer à beaucoup de mots
+		\end{itemize}			
+	\end{block}
+
+	\begin{block}{}
+	
+	\end{block}
 
 \end{frame}
 
