--- a/report/presentation.tex
+++ b/report/presentation.tex
@@ -23,6 +23,10 @@
 \titlepage
 \end{frame}
 
+\begin{frame}{Outline}
+  \tableofcontents
+\end{frame}
+
 \section{Introduction}   
  
 \begin{frame}
@@ -70,6 +74,12 @@
 \end{frame}
 
 \section{Translittération}
+
+
+\begin{frame}
+\tableofcontents[currentsection]
+\end{frame}
+
 
 \subsection{Méthodologie}
 
