--- a/report/report.tex
+++ b/report/report.tex
@@ -172,7 +172,7 @@ Les CRF \emph{Conditionnal Random Fields} sont des modèles statisitques permett
 p(\textbf{s}|\textbf{o}) = \frac{1}{Z_0}exp(\sum_{t=1}^T\sum_k \lambda_k f_k(...))
 \label{eqcrf}
 \end{equation}
-Les $f_k$ sont des fonctions \emph{feature} données par l'utilisateur nécéssiatant certains arguments, et les $\lambda_k$ sont des poids qui sont appris grâce aux données d'apprentissage.\textbf{s} et \textbf{s} étant respectivement une séquence d'état et la séquence des observations (ici les lettres). Les fonctions features sont des fonctions qui ont pour valeur 0 presque sur tout leur domaine et 1 sinon.
+Les $f_k$ sont des fonctions \emph{feature} données par l'utilisateur nécéssiatant certains arguments, et les $\lambda_k$ sont des poids qui sont appris grâce aux données d'apprentissage, \textbf{s} et \textbf{o} étant respectivement une séquence d'état et la séquence des observations (ici les lettres). Les fonctions features sont des fonctions qui ont pour valeur 0 presque sur tout leur domaine et 1 sinon.
 
 Nous avons utilisé dans le cadre de ce projet, l'implémentation CRF++\footnote{https://code.google.com/p/crfpp/}.
 
