Report: continued SMT

--- a/report/report.bib
+++ b/report/report.bib
@@ -47,4 +47,29 @@
     year = {2014},
     url = {http://www.statmt.org/moses/manual/manual.pdf},
     address = {University of Edinburgh},
+}
+@inproceedings{Koehn07,
+    author = {Koehn, Philipp and Hoang, Hieu and Birch, Alexandra and Callison-Burch, Chris and Federico, Marcello and Bertoldi, Nicola and Cowan, Brooke and Shen, Wade and Moran, Christine},
+    title = {Moses: Open Source Toolkit for Statistical Machine Translation},
+    booktitle = {Proceedings of the 45th Annual Meeting of the ACL on Interactive Poster and Demonstration Sessions},
+    series = {ACL '07},
+    year = {2007},
+    pages = {177--180},
+    url = {http://dl.acm.org/citation.cfm?id=1557769.1557821},
 } 
+@inproceedings{Koehn03,
+    author = {Koehn, Philipp and Och, Franz Josef and Marcu, Daniel},
+    title = {Statistical Phrase-based Translation},
+    booktitle = {Proceedings of the 2003 Conference of the North American Chapter of the Association for Computational Linguistics on Human Language Technology - Volume 1},
+    series = {NAACL '03},
+    year = {2003},
+    pages = {48--54},
+    url = {http://dx.doi.org/10.3115/1073445.1073462},
+}
+@mastersthesis{Matthews,
+    author = {Matthews, David},
+    title = {Machine Transliteration of Proper Names},
+    school = {University of Edinburgh},
+    year = {2007},
+    url = {http://homepages.inf.ed.ac.uk/miles/msc-projects/matthews.pdf},
+}
