--- a/report/report.bib
+++ b/report/report.bib
@@ -47,4 +47,13 @@
     year = {2014},
     url = {http://www.statmt.org/moses/manual/manual.pdf},
     address = {University of Edinburgh},
+}
+@inproceedings{Lafferty01,
+    author = {Lafferty, John and McCallum, Andrew and Pereira, Fernando},
+    title = {Conditional random fields: Probabilistic models for segmenting and labeling sequence data},
+    booktitle = {Proceedings of the International Conference on Machine Learning},
+    series = {ICML '01},
+    year = {2001},
+    url = {http://repository.upenn.edu/cgi/viewcontent.cgi?article=1162&context=cis_papers},
+}
 } 
