Report: continued SMT

--- a/report/report.bib
+++ b/report/report.bib
@@ -73,3 +73,9 @@
     year = {2007},
     url = {http://homepages.inf.ed.ac.uk/miles/msc-projects/matthews.pdf},
 }
+@misc{KoehnSlides,
+    author = {Koehn, Philipp},
+    title = {Slides of the Statistical Machine Translation book},
+    howpublished = {http://www.statmt.org/book/},
+    year = {2010}
+}
