--- a/report/report.tex
+++ b/report/report.tex
@@ -35,9 +35,7 @@ Les données nous ont été fournies par Vincent Claveau. Nous disposons de deux
 2997: #hexanoles# #hexanóis#
 2998: #catalasa# #catalase#
 \end{verbatim}
-\end{figure}
 
-\begin{figure}[H]
 \caption{Entrées dans le fichier d'évaluation Espagnol-Portugais}
 \begin{verbatim}
 182: #centrifugación# #centrifugação#	other	unknown
@@ -45,6 +43,29 @@ Les données nous ont été fournies par Vincent Claveau. Nous disposons de deux
 184: #ceramida# #ceramida# OR #ceramidas#	other	unknown
 \end{verbatim}
 \end{figure}
+
+
+\begin{table}[H]
+\caption{Longueur moyenne des mots dans chaque langue}
+\begin{center}
+\begin{tabular}{|l|c|c|}
+\hline
+Langue&Longueur moyenne\\
+\hline
+Espagnol&11.74\\
+\hline
+Portugais&11.52\\
+\hline
+\hline
+Anglais&12.27\\
+\hline
+Russe&11.64\\
+\hline
+\end{tabular}
+\end{center}
+
+\end{table}
+
 
 \subsection{Processus d'évaluation}
 \label{eval}
@@ -117,6 +138,8 @@ Une piste d'amélioration pourrait être de considérer leur taux de confiance d
 
 \subsection{Résultats}
 Le score maximal que nous parvenons à atteindre avec ce système est de \emph{69.0\%}. Ces résultats sont sur le jeu de données \emph{Espagnol-Portugais}.
+\begin{table}[H]
+\caption{Types de règles et résultats}
 \begin{center}
 \begin{tabular}{|l|c|c|}
 \hline
@@ -131,6 +154,7 @@ Aucune&51.0\%&1.06\\
 \end{tabular}
 \end{center}
 
+\caption{Valeur des différents paramètres et résultats}
 \begin{center}
 \begin{tabular}{|c|c|c||c|c|c|}
 \hline
@@ -156,6 +180,7 @@ Support $s$&Longueur $l$&Confiance $c$&Précision&Distance&Règles\\
 \hline
 \end{tabular}
 \end{center}
+\end{table}
 
 Nous n'avons pas considéré l'utilisation de cette méthode sur les données \emph{Anglais-Russe}, car l'alphabet est complétement différent. L'hypothèse de similarité des mots dans les deux langages n'est donc plus vérifiée. D'autres méthodes sont plus adaptées, notamment les méthodes \emph{statistiques} (traduction statistique, CRF).
 
@@ -208,17 +233,35 @@ La création d'un système de traduction avec Moses se fait en plusieurs étapes
 
 Les paramètres d'apprentissage sont les suivants:
 \begin{itemize}
-    \item Ordre des N-grammes du modèle de langue;
-    \item Lissage du modèle de langue;
-    \item Réordonnement (monotone dans notre cas);
-    \item Longueur maximale des phrases;
-    \item Heuristique d'alignement.
+    \item Ordre des N-grammes du modèle de langue (3 est la valeur retenue);
+    \item Réordonnancement (monotone dans notre cas);
+    \item Longueur maximale des phrases (par défaut 20, 5 donne d'aussi bon résultats);
 \end{itemize}
 
 Dans Moses, la probabilité finale d'une traduction est le produit de quatre probabilités: la probabilité du modèle de traduction syntagmatique, la probabilité du modèle de langue, le modèle de réordonnancement (qui n'est pas considéré dans notre cas), et finalement la pénalité de longueur. Les paramètres du modèle sont les poids attribués à ces différentes probabilités.
 
 \subsection{Résultats}
 
+\begin{table}[H]
+\begin{center}
+\caption{Valeurs optimales des poids}
+\begin{tabular}{|l|c|c|c|}
+\hline
+Données&Pénalité de longueur&Modèle de langue&Modèle de traduction\\
+\hline
+ENG-RUS&-0.3&0.65&\verb|[1,0,1,0.2]|\\
+\hline
+SPA-POR&-0.7&0.35&\verb|[1,0,1,0.2]|\\
+\hline
+\hline
+Par défaut&-1&0.5&\verb|[0.2,0.2,0.2,0.2]|\\
+\hline
+\end{tabular}
+\end{center}
+\end{table}
+
+\begin{table}[H]
+\caption{Résultats de la baseline (paramètres par défaut)}
 \begin{center}
 \begin{tabular}{|l|c|c|c|}
 \hline
@@ -231,14 +274,29 @@ SPA-POR&56.9\%&1.21&4.30\\
 \end{tabular}
 \end{center}
 
+\caption{Résultats avec paramètres optimaux}
+\begin{center}
+\begin{tabular}{|l|c|c|c|}
+\hline
+Données&Précision&Distance moyenne&Variance\\
+\hline
+ENG-RUS&\textbf{67.8\%}&\textbf{1.75}&14.47\\
+\hline
+SPA-POR&\textbf{71.5\%}&\textbf{0.73}&3.46\\
+\hline
+\end{tabular}
+\end{center}
+\end{table}
+
 \begin{figure}[H]
 \begin{center}
     \caption{Histogramme des distances pour les données \emph{ENG-RUS}}
-    \includegraphics[scale=0.5]{moses_histogram.pdf}
+    \includegraphics[scale=0.5]{moses_histogram_rus.pdf}
+    
+    \caption{Histogramme des distances pour les données \emph{SPA-POR}}
+    \includegraphics[scale=0.5]{moses_histogram_por.pdf}
 \end{center}
 \end{figure}
-
-Les résultats pour l'\emph{Espagnol-Portugais} sont moins bons qu'avec l'approche basée sur les règles de substitution. Les résultats avec l'\emph{Anglais-Russe} sont comparativement bons, compte tenu de la difficulté de translittération sur deux alphabets si différents.
 
 \section{CRF}
 Les CRF \emph{Conditionnal Random Fields} sont des modèles statisitques permettant de prendre plus de contexte qu'un classifieur "ordinaire". Ils permettent l'étiquettage de séquences. Ils ont été introduit par \cite{Lafferty01}. L'équation principale des CRF est donnée à l'équation \ref{eqcrf}.
@@ -286,7 +344,7 @@ CRF&\textbf{63.9\%}&\textbf{0.69}\\
 \end{center}
 
 \section{Conclusion et perspectives}
-\nocite{*}
+%\nocite{*}
 \bibliographystyle{apalike}
 \bibliography{report}
 
